--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <img src="pet/ing/foto de perfil.png" alt="foto principal">
+     <p>eu sou Ana Carolina</p>
+     <h1>eu ensino cuidados com animais</h1>
+     <p>eu sou especialista em cuidados com animais tiro duvidas </p>
+
 </body>
 </html>
