--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="style.css" />
     <title>Meu portfólio</title>
   </head>
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    
+
+
 <body>
-    <header class="container">
+    <header class="container text-center">
         <img src="pet/ing/foto de perfil.png" alt="foto principal">
         <p>eu sou Ana Carolina</p>
         <h1>eu ensino cuidados com animais</h1>
