--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
   </head>
     
 
-
 <body>
     <header class="container text-center">
-        <img src="pet/ing/foto de perfil.png" alt="foto principal">
+        <img src="img/foto de perfil.png" alt="foto principal">
         <p>eu sou Ana Carolina</p>
         <h1>eu ensino cuidados com animais</h1>
         <p>eu sou especialista em cuidados com animais tiro duvidas </p>
